welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:26: error: expected class or object definition
def faireDiag1(c:Color){
^PatternPicture:41: error: expected class or object definition
def faireDiag2(c:Color){
^PatternPicture:56: error: expected class or object definition
def faireMotif(){
^PatternPicture:79: error: Unmatched closing brace '}' ignored here
}
^